# ZeroMT

./: .gitignore  Cargo.toml  README.md
Java/: README.md
Proof System Implementation/: .gitignore  Cargo.toml  README.md
Proof System Implementation/src/: csv_utils.rs  lib.rs  utils.rs
Proof System Implementation/tests/: inner_halo_proof_tests.rs  inner_sigma_tests.rs  ipa_comparison_bench.rs  range_proof_tests.rs  sigma_ab_tests.rs  sigma_r_tests.rs  sigma_sk_tests.rs  sigma_y_tests.rs  utils_tests.rs  zeromt_proof_bench.rs  zeromt_proof_tests.rs
Rust/: README.md
Rust/src/: elgamal.rs  lib.rs
Rust/tests/: range_proof_tests.rs  sigma_ab_tests.rs  sigma_r_tests.rs  utils_tests.rs  zeromt_proof_bench.rs
Smart Contract Costs Estimation/: .gitignore  README.md  pom.xml
src/: custom_errors.rs  elgamal.rs  lib.rs  main.rs  proof_system_utils.rs  proof_utils.rs  prover.rs  transcript.rs  utils.rs  verifier.rs  zeromt.rs
src/benchmark/: exec_time_benchmark.rs
src/bulletproofs/: bulletproofs_proof.rs  bulletproofs_prover.rs  bulletproofs_verifier.rs  mod.rs  poly_coefficients.rs  poly_vector.rs
src/bulletshort/: bulletshort_prover.rs  mod.rs  poly.rs
src/errors/: mod.rs  proof_error.rs  transcript_error.rs  utils_error.rs
src/inner/: inner_proof.rs  (+3 more)
tests/: bulletproofs_tests.rs  bulletshort_tests.rs  proof_utils_tests.rs  range_proof_benchs.rs  range_proof_tests.rs  sigma_ab_benchs.rs  sigma_ab_tests.rs  sigma_r_benchs.rs  sigma_r_tests.rs  sigma_sk_benchs.rs  sigma_sk_tests.rs  sigma_y_benchs.rs  sigma_y_tests.rs  utils_tests.rs  zeromt_proof_tests.rs
(+70 files in other folders)
