[package]
name = "zeromt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merlin = "3.0.0"
ark-bn254 = { version = "0.3.0", features = [ "curve" ]}
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-serialize = "0.3.0"
rand = { version = "0.8", features = [ "std", "std_rng" ] }
num-bigint = "0.4"
ark-crypto-primitives = "0.3.0"