[package]
name = "zeromt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zeromt"
path = "src/main.rs"

[lib]
name = "zeromt"
path = "src/lib.rs"

[dependencies]
merlin = "3.0.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-bn254 = "0.3.0"
ark-std = "0.3.0"
rand = "0.8.5"
ark-serialize = "0.3.0"
ark-crypto-primitives = "0.3.0"